--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 repos:
 - repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.45.0
+  rev: v1.96.1
   hooks:
     - id: terraform_fmt
+    - id: terraform_validate
     - id: terraform_docs
