update fixed tf

--- a/.github/workflows/module-update.yaml
+++ b/.github/workflows/module-update.yaml
@@ -16,6 +16,8 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: "1.11.4"
 
     - name: Format Terraform scripts
       id: fmt
